data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_598.wast
;; 9. **Test Name: No-Operation with Indirect Function Call Validation**    - **Description**: Add protective `nop` instructions around `call_indirect` to validate proper call table implementation.    - **Constraint**: Ensure that indirect calls resolve correctly despite the presence of `nop`.    - **Improper Handling Check**: Ensures `nop` does not affect the indirect call lookup or execution.    - **Expected Behavior**: Indirect call resolution and execution remain identical across both implementations.

(assert_malformed
  (module
    (table $t 1 funcref)
    (elem (i32.const 0) $func)
    (func $func (nop) (call_indirect (type 0) (i32.const 0)) (nop))
    (func (type 0) (nop)))
  "unexpected token")